--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ZachBrod/workflows.git"
+    "url": "https://github.com/Dameron76/WorkflowPractice.git"
   },
-  "author": "Zach Broderick",
+  "author": "Donovan Dameron",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
